--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,23 +20,13 @@
         android:layout_below="@+id/counter"
         android:layout_alignStart="@+id/counter" />
 
-    <SeekBar
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/frequency"
-        android:layout_alignStart="@+id/frequency"
-        android:layout_marginTop="64dp"
-        android:id="@+id/slider1"
-        android:layout_alignEnd="@+id/frequency"
-        android:max="100" />
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="COUNTER VLUE"
         android:id="@+id/counter"
-        android:layout_marginTop="65dp"
-        android:layout_marginStart="81dp"
+        android:layout_marginTop="76dp"
+        android:layout_marginStart="37dp"
         android:layout_below="@+id/onOffSwitch"
         android:layout_alignParentStart="true" />
 
@@ -44,10 +34,20 @@
         android:text="Start/Stop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="84dp"
+        android:layout_marginTop="82dp"
         android:id="@+id/onOffSwitch"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="36dp" />
+        android:layout_alignStart="@+id/counter" />
+
+    <SeekBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="52dp"
+        android:id="@+id/slider1"
+        android:max="100"
+        android:layout_below="@+id/frequency"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="62dp"
+        android:layout_toEndOf="@+id/counter" />
 
 </RelativeLayout>
